<resources>
    <string name="app_name">Kotlin Sample</string>
    <string name="e_mail">E-mail Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="description_of_image">Image</string>
    <string name="collections">Collections</string>
    <string name="products_in_collection">Products in Collection</string>
    <string name="default_date">2020-05-01</string>
    <string name="select_check_in_date">Select Check-In Date</string>
    <string name="select_check_out_date">Select Check-Out Date</string>
    <string name="request_to_book">Request To Book</string>
    <string name="purchase">Purchase</string>
    <string name="back_to_main">Back To Main</string>

    <string-array name="dotAuthorizationKey">
        <item name="useMode">3</item>
        <item name="domain">https://api.xsight.in/</item> // DOT END POINT
        <item name="serviceNumber">300</item>
        <item name="isDebug">false</item>
        <item name="accessToken">1525fe0c-4719-11ea-bedb-0242ac10ee0b</item> // Luxstay accessToken
        <item name="domain_x">https://api.xsight.in/</item> // DOX END POINT
        <item name="isShowDebugLog">false</item>
    </string-array>
</resources>